amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-extension-interface.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-extension-interface.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'surname'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-extension-interface.api.graphql#/declares/shape/HasName/property/property/surname
  Property: 
  Range: [(6,4)-(6,19)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'surname'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-extension-interface.api.graphql#/declares/shape/HasName/property/property/surname_1
  Property: 
  Range: [(7,4)-(7,19)]
  Location: 
